# plugin-link

./: .gitignore  AGENTS.md  README.md  justfile  opencode.json  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/workflows/: deploy.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: layout.ts  linkml.ts  types.ts
src/lib/components/: ColumnNode.svelte  CustomControls.svelte  DomainEditor.svelte  DomainLegend.svelte  FileList.svelte  FlowController.svelte  GroupEditor.svelte  GroupLegend.svelte  SchemaEditor.svelte  SchemaUploader.svelte  SearchBar.svelte  TableNode.svelte  TableParentNode.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
static/: domain-config.yaml  group-config.yaml  hix-schema.linkml  hix.yaml  ingest.md  omop_cdm.yaml  sein-omop.yaml  sein.yaml
