[package]
name = "plugin-link"
version = "0.0.1"
description = "plugin-link desktop app"
authors = []
edition = "2021"

[lib]
name = "plugin_link_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
